--- a/.github/workflows/publish-github-page.yaml
+++ b/.github/workflows/publish-github-page.yaml
@@ -60,8 +60,8 @@ jobs:
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
-        env:
-          INPUT_PATH: outputs/web/
+        with:
+          path: outputs/web/
 
   # Deployment job
   deploy:
